panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_add_signed_char.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_add_signed_char.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_add_signed_char.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (a~1 `signed char` @0) (truncate `signed char` @0 (90 `int` @4)))
         (definition (b~2 `signed char` @1) (truncate `signed char` @1 (110 `int` @4)))
         (definition (result~3 `int` @4)
            (add `int` @4
               (sign-extend `int` @4 (a~1 `signed char` @0))
               (sign-extend `int` @8 (b~2 `signed char` @1))))
         (return (result~3 `int` @4)))))

----- stderr -----
