panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_addition.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_addition.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_addition.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (return
            (add `int` @0
               (add `int` @0
                  (add `int` @0
                     (1 `int` @0)
                     (1 `int` @4))
                  (1 `int` @4))
               (2 `int` @4))))))

----- stderr -----
