panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_argc.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_argc.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_argc.c"
   (function-definition external stack-size=24
      (main~0 `fn(argc: int, ∅: ptr<ptr<char>>) -> int` (static main))
      (params
         (argc~2 `int` @0)
         (main.unnamed_parameter.1~3 `ptr<ptr<char>>` @8))
      (compound-statement
         (return (argc~2 `int` @0)))))

----- stderr -----
