panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_argv_with_unnamed_argc.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_argv_with_unnamed_argc.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_argv_with_unnamed_argc.c"
   (declaration external (strlen~0 `fn(∅: ptr<char const>) -> unsigned long` (static strlen)) ∅)
   (function-definition external stack-size=88
      (main~1 `fn(∅: int, argv: ptr<ptr<char>>) -> int` (static main))
      (params
         (main.unnamed_parameter.0~3 `int` @0)
         (argv~4 `ptr<ptr<char>>` @8))
      (compound-statement
         (return
            (truncate `int` @16
               (call `unsigned long` @24
                  (addressof `ptr<fn(∅: ptr<char const>) -> unsigned long>` @32
                     (strlen~0 `fn(∅: ptr<char const>) -> unsigned long` (static strlen)))
                  (noop-type-conversion `ptr<char const>` @40
                     (deref `ptr<char>` @40
                        (ptr-add `ptr<ptr<char>>` @48
                           (argv~4 `ptr<ptr<char>>` @8)
                           (sign-extend `long` @56 (1 `int` @64)))))))))))

----- stderr -----
