panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_assignment_from_parenthesised_implicit_conversion.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_assignment_from_parenthesised_implicit_conversion.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_assignment_from_parenthesised_implicit_conversion.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (a~1 `unsigned int` @0) (noop-type-conversion `unsigned int` @0 (27 `int` @0)))
         (expression
            (assign `unsigned int` @0
               (a~1 `unsigned int` @0)
               (noop-type-conversion `unsigned int` @0 (42 `int` @0))))
         (return (noop-type-conversion `int` @0 (a~1 `unsigned int` @0))))))

----- stderr -----
