panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_assignment_to_char.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_assignment_to_char.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_assignment_to_char.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (a~1 `char` @0) (truncate `char` @0 (1 `int` @4)))
         (definition (b~2 `char` @1) (truncate `char` @1 (2 `int` @4)))
         (definition (c~3 `char` @2) (truncate `char` @2 (42 `int` @4)))
         (definition (d~4 `char` @3) (truncate `char` @3 (3 `int` @4)))
         (expression
            (assign `char` @1
               (b~2 `char` @1)
               (truncate `char` @1 (123 `int` @4))))
         (return (sign-extend `int` @4 (c~3 `char` @2))))))

----- stderr -----
